--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   overflow-x: hidden;
   width: 100%;
+  background-color: rgb(217, 252, 247);
 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
