--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -9,3 +9,35 @@
   line-height: 1.5;
   font-weight: 400;
 }
+
+.dugme {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1vw;
+  color: white;
+  background-color: #eb949e;
+  text-decoration: none;
+  border: none;
+  border-radius: 100px;
+  width: 10vw;
+  height: 7vh;
+  margin: 0 auto;
+  transition: 0.4s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.dugme:hover {
+  width: 20vw;
+  background-color: #68d3d1;
+}
+
+.dugme a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
