--- a/frontend/src/css/header-footer.css
+++ b/frontend/src/css/header-footer.css
@@ -45,6 +45,7 @@ footer {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     border-radius: 1000px;
     transition: 0.3s;
+    margin: 2vh;
 }
 
 footer:hover {
