--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -10,6 +10,8 @@
   font-weight: 400;
 }
 
+/*DUGME*/
+
 .dugme {
   display: flex;
   justify-content: center;
@@ -41,6 +43,7 @@
   width: 100%;
   height: 100%;
 }
+/*NASLOV*/
 
 h1 {
   display: flex;
@@ -51,7 +54,7 @@ h1 {
   background-size: 200%; 
   color: white;
   border-radius: 100px;
-  margin: 0 3%;
+  margin: 1.5% 3% 0 3%;
   margin-bottom: 2%;
   padding: 0;
   animation: gradient-slide 3s linear infinite;
