--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -75,5 +75,13 @@ h1 {
 /*TEKST*/
 
 .uvodni {
-display: flex;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: #00000089;
+  background-color: #f7f7f7;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 1000px;
+  margin: 0 20%;
+  padding: 1% 5%;
 }
