--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -43,7 +43,7 @@
   width: 100%;
   height: 100%;
 }
-/*NASLOV*/
+/*NASLOVI*/
 
 h1 {
   display: flex;
@@ -70,6 +70,21 @@ h1 {
   100% {
     background-position: 0%;
   }
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 2.2vw;
+  background: linear-gradient(to right, #e22030, #00aeac);
+  background-size: 200%; 
+  color: white;
+  border-radius: 100px;
+  text-align: center;
+  width: 50vw;
+  margin: 2% auto; /*prva top, druga left right, treca bottom*/
+  animation: gradient-slide 3s linear infinite;
 }
 
 /*TEKST*/
