--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -83,7 +83,7 @@ h2 {
   border-radius: 100px;
   text-align: center;
   width: 50vw;
-  margin: 2% auto; /*prva top, druga left right, treca bottom*/
+  margin: 2% auto;
   animation: gradient-slide 3s linear infinite;
 }
 
