--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -100,3 +100,35 @@ h1 {
   margin: 0 20%;
   padding: 1% 5%;
 }
+
+/*FORME*/
+
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 12px;
+  background-color: #f0f0f0;
+  width: 50%;
+  margin: 20px auto;
+  padding: 20px 0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
+}
+
+form .dugme{
+  margin: 12px 0;
+}
+
+label {
+  font-weight: bold;
+  color: rgb(81, 81, 81);
+}
+
+input {
+  padding: 8px 12px;
+  border: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 100px;
+  width: 270px;
+}
