--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -43,6 +43,43 @@
   width: 100%;
   height: 100%;
 }
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1vw;
+  color: white;
+  font-weight: bold;
+  background-color: #eb949e;
+  text-decoration: none;
+  border: none;
+  border-radius: 100px;
+  width: 10vw;
+  height: 7vh;
+  margin: 0 auto;
+  transition: 0.4s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+  width: 20vw;
+  background-color: #68d3d1;
+}
+
+button a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
 /*NASLOVI*/
 
 h1 {
@@ -116,7 +153,7 @@ form {
   border-radius: 50px;
 }
 
-form .dugme{
+form button {
   margin: 12px 0;
 }
 
