--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -12,29 +12,35 @@
 
 /*DUGME*/
 
+
+.dugme, button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1vw;
+  font-weight: 600;
+  color: white;
+  background-color: #eb949e;
+  text-decoration: none;
+  border: none;
+  border-radius: 100px;
+  width: 10vw;
+  height: 7vh;
+  margin: 0 auto;
+  transition: 0.4s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
 .dugme {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1vw;
-  color: white;
-  background-color: #eb949e;
-  text-decoration: none;
-  border: none;
-  border-radius: 100px;
-  width: 10vw;
-  height: 7vh;
-  margin: 0 auto;
-  transition: 0.4s;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  font-weight: 700;
 }
 
-.dugme:hover {
+.dugme:hover, button:hover {
   width: 20vw;
   background-color: #68d3d1;
 }
 
-.dugme a {
+.dugme a, button a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,42 +49,6 @@
   width: 100%;
   height: 100%;
 }
-
-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1vw;
-  color: white;
-  font-weight: bold;
-  background-color: #eb949e;
-  text-decoration: none;
-  border: none;
-  border-radius: 100px;
-  width: 10vw;
-  height: 7vh;
-  margin: 0 auto;
-  transition: 0.4s;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-button:hover {
-  width: 20vw;
-  background-color: #68d3d1;
-}
-
-button a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: white;
-  width: 100%;
-  height: 100%;
-}
-
-
-
 
 /*NASLOVI*/
 
@@ -157,6 +127,7 @@ form button {
   margin: 12px 0;
   width: 150px;
 }
+
 form .dugme {
   margin: 12px 0;
   width: 150px;
