--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -105,7 +105,7 @@ h1 {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   border-radius: 1000px;
   margin: 0 20%;
-  padding: 1% 5%;
+  padding: 20px 5%;
 }
 
 /*FORME*/
