odvojen kalendar u posebnu komponentu kako bi kod bio pregledniji, dodati dugmici na stranici kalendar

--- a/frontend/src/css/kalendar.css
+++ b/frontend/src/css/kalendar.css
@@ -1,7 +1,7 @@
 .kalendar {
     background-color: #ffb7a5;
     height: 90vh;
-    margin: 50px;
+    margin: 30px 50px 0;
     border-radius: 30px;
 }
 
